Change image folder from media to skin

--- a/app/design/frontend/base/default/template/atos/form/aurore.phtml
+++ b/app/design/frontend/base/default/template/atos/form/aurore.phtml
@@ -18,7 +18,7 @@
 <ul class="form-list">
     <li>
         <div class="atos-logo">
-            <img src="<?php echo Mage::getBaseUrl('media') . 'atos/logo/AURORE.gif' ?>" alt="AURORE" />
+            <img src="<?php echo Mage::getSkinUrl('images/atos/AURORE.gif'); ?>" alt="AURORE" />
         </div>
     </li>
 </ul>
