--- a/app/design/frontend/base/default/template/atos/form/euro.phtml
+++ b/app/design/frontend/base/default/template/atos/form/euro.phtml
@@ -18,7 +18,7 @@
 <ul class="form-list">
     <li>
         <div class="atos-logo">
-            <img src="<?php echo Mage::getBaseUrl('media') . 'atos/logo/1EUROCOM.gif' ?>" alt="1EUROCOM" />
+            <img src="<?php echo Mage::getSkinUrl('images/atos/1EUROCOM.gif'); ?>" alt="1EUROCOM" />
         </div>
     </li>
 </ul>
