--- a/app/design/frontend/default/default/template/atos/form/euro.phtml
+++ b/app/design/frontend/default/default/template/atos/form/euro.phtml
@@ -16,7 +16,7 @@
 ?>
 <?php $_code = $this->getMethodCode() ?>
 <ul class="form-list">
-    <li><img src="<?php echo Mage::getBaseUrl('media') . 'atos/logo/1EUROCOM.gif' ?>" alt="1EUROCOM" /></li>
+    <li><img src="<?php echo Mage::getSkinUrl('images/atos/1EUROCOM.gif'); ?>" alt="1EUROCOM" /></li>
 </ul>
 <ul class="form-list" id="payment_form_<?php echo $_code ?>" style="display:none">
     <li><?php echo $this->__('You will be redirected to the payment server after the finalization of your order.') ?></li>
