--- a/app/design/frontend/default/default/template/atos/form/aurore.phtml
+++ b/app/design/frontend/default/default/template/atos/form/aurore.phtml
@@ -16,7 +16,7 @@
 ?>
 <?php $_code = $this->getMethodCode() ?>
 <ul class="form-list">
-    <li><img src="<?php echo Mage::getSkinUrl('images/atos/AURORE.gif'); ?>" alt="AURORE" /></li>
+    <li><img src="<?php echo $this->getSkinUrl('images/atos/AURORE.gif'); ?>" alt="AURORE" /></li>
 </ul>
 <ul class="form-list" id="payment_form_<?php echo $_code ?>" style="display:none">
     <li><?php echo $this->__('You will be redirected to the payment server after the finalization of your order.') ?></li>
